Fix margin and gap interference in article element

--- a/src/App.css
+++ b/src/App.css
@@ -256,7 +256,7 @@ section:nth-last-child(2):not(.hero) {
   .menu {
     display: flex;
     flex-wrap: wrap;
-    column-gap: 24px;
+    justify-content: space-between;
 
     article {
       width: calc(50% - 24px);
